# WDP_Lab10

./: CMakeLists.txt  README.md  main.cpp
Docs/: Lab_10 opis.docx  Lab_10.docx
Zadania/: Zadanie101.cpp  Zadanie101.h  Zadanie102.cpp  Zadanie102.h  Zadanie103.cpp  Zadanie103.h  Zadanie104.cpp  Zadanie104.h  Zadanie105.cpp  Zadanie105.h
